deployment.yaml
#  k3d cluster create -p "8000:30000@loadbalancer" --agents 2

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway
  template:
    metadata:
      labels:
        app: payment-gateway
    spec:
      containers:
      - name: payment-gateway
        image: carlos0406/payment-gateway-go
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-service
spec:
  type: LoadBalancer
  selector:
    app: payment-gateway
  ports:
  - port: 8001
    targetPort: 8080
    nodePort: 30001
